// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fixed Table 1`] = `
<table style="table-layout: fixed;">
  <thead>
    <tr>
      <th>
        Header 1
      </th>
      <th>
        Header 2
      </th>
      <th>
        Header 3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Cell 11
      </td>
      <td>
        Cell 12
      </td>
      <td>
        Cell 13
      </td>
    </tr>
    <tr>
      <td>
        Cell 21
      </td>
      <td>
        Cell 22
      </td>
      <td>
        Cell 23
      </td>
    </tr>
    <tr>
      <td>
        Cell 31
      </td>
      <td>
        Cell 32
      </td>
      <td>
        Cell 33
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Multiple Header Rows 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Header 1
      </th>
      <th colspan="2">
        Header 2
      </th>
    </tr>
    <tr>
      <th>
        Header 3
      </th>
      <th>
        Header 4
      </th>
      <th>
        Header 5
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Cell 11
      </td>
      <td>
        Cell 12
      </td>
      <td>
        Cell 13
      </td>
    </tr>
    <tr>
      <td>
        Cell 21
      </td>
      <td>
        Cell 22
      </td>
      <td>
        Cell 23
      </td>
    </tr>
    <tr>
      <td>
        Cell 31
      </td>
      <td>
        Cell 32
      </td>
      <td>
        Cell 33
      </td>
    </tr>
    <tr>
      <td>
        Cell 41
      </td>
      <td>
        Cell 42
      </td>
      <td>
        Cell 43
      </td>
    </tr>
    <tr>
      <td>
        Cell 51
      </td>
      <td>
        Cell 52
      </td>
      <td>
        Cell 53
      </td>
    </tr>
    <tr>
      <td>
        Cell 61
      </td>
      <td>
        Cell 62
      </td>
      <td>
        Cell 63
      </td>
    </tr>
    <tr>
      <td>
        Cell 71
      </td>
      <td>
        Cell 72
      </td>
      <td>
        Cell 73
      </td>
    </tr>
    <tr>
      <td>
        Cell 81
      </td>
      <td>
        Cell 82
      </td>
      <td>
        Cell 83
      </td>
    </tr>
    <tr>
      <td>
        Cell 91
      </td>
      <td>
        Cell 92
      </td>
      <td>
        Cell 93
      </td>
    </tr>
    <tr>
      <td>
        Cell 101
      </td>
      <td>
        Cell 102
      </td>
      <td>
        Cell 103
      </td>
    </tr>
    <tr>
      <td>
        Cell 111
      </td>
      <td>
        Cell 112
      </td>
      <td>
        Cell 113
      </td>
    </tr>
    <tr>
      <td>
        Cell 121
      </td>
      <td>
        Cell 122
      </td>
      <td>
        Cell 123
      </td>
    </tr>
    <tr>
      <td>
        Cell 131
      </td>
      <td>
        Cell 132
      </td>
      <td>
        Cell 133
      </td>
    </tr>
    <tr>
      <td>
        Cell 141
      </td>
      <td>
        Cell 142
      </td>
      <td>
        Cell 143
      </td>
    </tr>
    <tr>
      <td>
        Cell 151
      </td>
      <td>
        Cell 152
      </td>
      <td>
        Cell 153
      </td>
    </tr>
    <tr>
      <td>
        Cell 161
      </td>
      <td>
        Cell 162
      </td>
      <td>
        Cell 163
      </td>
    </tr>
    <tr>
      <td>
        Cell 171
      </td>
      <td>
        Cell 172
      </td>
      <td>
        Cell 173
      </td>
    </tr>
    <tr>
      <td>
        Cell 181
      </td>
      <td>
        Cell 182
      </td>
      <td>
        Cell 183
      </td>
    </tr>
    <tr>
      <td>
        Cell 191
      </td>
      <td>
        Cell 192
      </td>
      <td>
        Cell 193
      </td>
    </tr>
    <tr>
      <td>
        Cell 201
      </td>
      <td>
        Cell 202
      </td>
      <td>
        Cell 203
      </td>
    </tr>
    <tr>
      <td>
        Cell 211
      </td>
      <td>
        Cell 212
      </td>
      <td>
        Cell 213
      </td>
    </tr>
    <tr>
      <td>
        Cell 221
      </td>
      <td>
        Cell 222
      </td>
      <td>
        Cell 223
      </td>
    </tr>
    <tr>
      <td>
        Cell 231
      </td>
      <td>
        Cell 232
      </td>
      <td>
        Cell 233
      </td>
    </tr>
    <tr>
      <td>
        Cell 241
      </td>
      <td>
        Cell 242
      </td>
      <td>
        Cell 243
      </td>
    </tr>
    <tr>
      <td>
        Cell 251
      </td>
      <td>
        Cell 252
      </td>
      <td>
        Cell 253
      </td>
    </tr>
    <tr>
      <td>
        Cell 261
      </td>
      <td>
        Cell 262
      </td>
      <td>
        Cell 263
      </td>
    </tr>
    <tr>
      <td>
        Cell 271
      </td>
      <td>
        Cell 272
      </td>
      <td>
        Cell 273
      </td>
    </tr>
    <tr>
      <td>
        Cell 281
      </td>
      <td>
        Cell 282
      </td>
      <td>
        Cell 283
      </td>
    </tr>
    <tr>
      <td>
        Cell 291
      </td>
      <td>
        Cell 292
      </td>
      <td>
        Cell 293
      </td>
    </tr>
    <tr>
      <td>
        Cell 301
      </td>
      <td>
        Cell 302
      </td>
      <td>
        Cell 303
      </td>
    </tr>
    <tr>
      <td>
        Cell 311
      </td>
      <td>
        Cell 312
      </td>
      <td>
        Cell 313
      </td>
    </tr>
    <tr>
      <td>
        Cell 321
      </td>
      <td>
        Cell 322
      </td>
      <td>
        Cell 323
      </td>
    </tr>
    <tr>
      <td>
        Cell 331
      </td>
      <td>
        Cell 332
      </td>
      <td>
        Cell 333
      </td>
    </tr>
    <tr>
      <td>
        Cell 341
      </td>
      <td>
        Cell 342
      </td>
      <td>
        Cell 343
      </td>
    </tr>
    <tr>
      <td>
        Cell 351
      </td>
      <td>
        Cell 352
      </td>
      <td>
        Cell 353
      </td>
    </tr>
    <tr>
      <td>
        Cell 361
      </td>
      <td>
        Cell 362
      </td>
      <td>
        Cell 363
      </td>
    </tr>
    <tr>
      <td>
        Cell 371
      </td>
      <td>
        Cell 372
      </td>
      <td>
        Cell 373
      </td>
    </tr>
    <tr>
      <td>
        Cell 381
      </td>
      <td>
        Cell 382
      </td>
      <td>
        Cell 383
      </td>
    </tr>
    <tr>
      <td>
        Cell 391
      </td>
      <td>
        Cell 392
      </td>
      <td>
        Cell 393
      </td>
    </tr>
    <tr>
      <td>
        Cell 401
      </td>
      <td>
        Cell 402
      </td>
      <td>
        Cell 403
      </td>
    </tr>
    <tr>
      <td>
        Cell 411
      </td>
      <td>
        Cell 412
      </td>
      <td>
        Cell 413
      </td>
    </tr>
    <tr>
      <td>
        Cell 421
      </td>
      <td>
        Cell 422
      </td>
      <td>
        Cell 423
      </td>
    </tr>
    <tr>
      <td>
        Cell 431
      </td>
      <td>
        Cell 432
      </td>
      <td>
        Cell 433
      </td>
    </tr>
    <tr>
      <td>
        Cell 441
      </td>
      <td>
        Cell 442
      </td>
      <td>
        Cell 443
      </td>
    </tr>
    <tr>
      <td>
        Cell 451
      </td>
      <td>
        Cell 452
      </td>
      <td>
        Cell 453
      </td>
    </tr>
    <tr>
      <td>
        Cell 461
      </td>
      <td>
        Cell 462
      </td>
      <td>
        Cell 463
      </td>
    </tr>
    <tr>
      <td>
        Cell 471
      </td>
      <td>
        Cell 472
      </td>
      <td>
        Cell 473
      </td>
    </tr>
    <tr>
      <td>
        Cell 481
      </td>
      <td>
        Cell 482
      </td>
      <td>
        Cell 483
      </td>
    </tr>
    <tr>
      <td>
        Cell 491
      </td>
      <td>
        Cell 492
      </td>
      <td>
        Cell 493
      </td>
    </tr>
    <tr>
      <td>
        Cell 501
      </td>
      <td>
        Cell 502
      </td>
      <td>
        Cell 503
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Preview 1`] = `
<table
  data-border="true"
  data-hover="true"
  data-zebra="true"
>
  <caption>
    Table caption
  </caption>
  <thead>
    <tr>
      <th>
        Header 1
      </th>
      <th>
        Header 2
      </th>
      <th>
        Header 3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Cell 1
      </td>
      <td>
        Cell 2
      </td>
      <td>
        Cell 3
      </td>
    </tr>
    <tr>
      <td>
        Cell 4
      </td>
      <td>
        Cell 5
      </td>
      <td>
        Cell 6
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td>
        Footer 1
      </td>
      <td>
        Footer 2
      </td>
      <td>
        Footer 3
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Sortable 1`] = `
<table>
  <thead>
    <tr>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        Epost
      </th>
      <th aria-sort="none">
        <button type="button">
          Telefon
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Lise Nordmann
      </td>
      <td>
        lise@nordmann.no
      </td>
      <td>
        22345678
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        87654321
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        32345678
      </td>
    </tr>
    <tr>
      <td>
        Per Nordmann
      </td>
      <td>
        per@nordmann.no
      </td>
      <td>
        12345678
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sticky Header 1`] = `
<table
  data-sticky-header="true"
  tabindex="0"
>
  <thead>
    <tr>
      <th>
        Header 1
      </th>
      <th>
        Header 2
      </th>
      <th>
        Header 3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Cell 11
      </td>
      <td>
        Cell 12
      </td>
      <td>
        Cell 13
      </td>
    </tr>
    <tr>
      <td>
        Cell 21
      </td>
      <td>
        Cell 22
      </td>
      <td>
        Cell 23
      </td>
    </tr>
    <tr>
      <td>
        Cell 31
      </td>
      <td>
        Cell 32
      </td>
      <td>
        Cell 33
      </td>
    </tr>
    <tr>
      <td>
        Cell 41
      </td>
      <td>
        Cell 42
      </td>
      <td>
        Cell 43
      </td>
    </tr>
    <tr>
      <td>
        Cell 51
      </td>
      <td>
        Cell 52
      </td>
      <td>
        Cell 53
      </td>
    </tr>
    <tr>
      <td>
        Cell 61
      </td>
      <td>
        Cell 62
      </td>
      <td>
        Cell 63
      </td>
    </tr>
    <tr>
      <td>
        Cell 71
      </td>
      <td>
        Cell 72
      </td>
      <td>
        Cell 73
      </td>
    </tr>
    <tr>
      <td>
        Cell 81
      </td>
      <td>
        Cell 82
      </td>
      <td>
        Cell 83
      </td>
    </tr>
    <tr>
      <td>
        Cell 91
      </td>
      <td>
        Cell 92
      </td>
      <td>
        Cell 93
      </td>
    </tr>
    <tr>
      <td>
        Cell 101
      </td>
      <td>
        Cell 102
      </td>
      <td>
        Cell 103
      </td>
    </tr>
    <tr>
      <td>
        Cell 111
      </td>
      <td>
        Cell 112
      </td>
      <td>
        Cell 113
      </td>
    </tr>
    <tr>
      <td>
        Cell 121
      </td>
      <td>
        Cell 122
      </td>
      <td>
        Cell 123
      </td>
    </tr>
    <tr>
      <td>
        Cell 131
      </td>
      <td>
        Cell 132
      </td>
      <td>
        Cell 133
      </td>
    </tr>
    <tr>
      <td>
        Cell 141
      </td>
      <td>
        Cell 142
      </td>
      <td>
        Cell 143
      </td>
    </tr>
    <tr>
      <td>
        Cell 151
      </td>
      <td>
        Cell 152
      </td>
      <td>
        Cell 153
      </td>
    </tr>
    <tr>
      <td>
        Cell 161
      </td>
      <td>
        Cell 162
      </td>
      <td>
        Cell 163
      </td>
    </tr>
    <tr>
      <td>
        Cell 171
      </td>
      <td>
        Cell 172
      </td>
      <td>
        Cell 173
      </td>
    </tr>
    <tr>
      <td>
        Cell 181
      </td>
      <td>
        Cell 182
      </td>
      <td>
        Cell 183
      </td>
    </tr>
    <tr>
      <td>
        Cell 191
      </td>
      <td>
        Cell 192
      </td>
      <td>
        Cell 193
      </td>
    </tr>
    <tr>
      <td>
        Cell 201
      </td>
      <td>
        Cell 202
      </td>
      <td>
        Cell 203
      </td>
    </tr>
    <tr>
      <td>
        Cell 211
      </td>
      <td>
        Cell 212
      </td>
      <td>
        Cell 213
      </td>
    </tr>
    <tr>
      <td>
        Cell 221
      </td>
      <td>
        Cell 222
      </td>
      <td>
        Cell 223
      </td>
    </tr>
    <tr>
      <td>
        Cell 231
      </td>
      <td>
        Cell 232
      </td>
      <td>
        Cell 233
      </td>
    </tr>
    <tr>
      <td>
        Cell 241
      </td>
      <td>
        Cell 242
      </td>
      <td>
        Cell 243
      </td>
    </tr>
    <tr>
      <td>
        Cell 251
      </td>
      <td>
        Cell 252
      </td>
      <td>
        Cell 253
      </td>
    </tr>
    <tr>
      <td>
        Cell 261
      </td>
      <td>
        Cell 262
      </td>
      <td>
        Cell 263
      </td>
    </tr>
    <tr>
      <td>
        Cell 271
      </td>
      <td>
        Cell 272
      </td>
      <td>
        Cell 273
      </td>
    </tr>
    <tr>
      <td>
        Cell 281
      </td>
      <td>
        Cell 282
      </td>
      <td>
        Cell 283
      </td>
    </tr>
    <tr>
      <td>
        Cell 291
      </td>
      <td>
        Cell 292
      </td>
      <td>
        Cell 293
      </td>
    </tr>
    <tr>
      <td>
        Cell 301
      </td>
      <td>
        Cell 302
      </td>
      <td>
        Cell 303
      </td>
    </tr>
    <tr>
      <td>
        Cell 311
      </td>
      <td>
        Cell 312
      </td>
      <td>
        Cell 313
      </td>
    </tr>
    <tr>
      <td>
        Cell 321
      </td>
      <td>
        Cell 322
      </td>
      <td>
        Cell 323
      </td>
    </tr>
    <tr>
      <td>
        Cell 331
      </td>
      <td>
        Cell 332
      </td>
      <td>
        Cell 333
      </td>
    </tr>
    <tr>
      <td>
        Cell 341
      </td>
      <td>
        Cell 342
      </td>
      <td>
        Cell 343
      </td>
    </tr>
    <tr>
      <td>
        Cell 351
      </td>
      <td>
        Cell 352
      </td>
      <td>
        Cell 353
      </td>
    </tr>
    <tr>
      <td>
        Cell 361
      </td>
      <td>
        Cell 362
      </td>
      <td>
        Cell 363
      </td>
    </tr>
    <tr>
      <td>
        Cell 371
      </td>
      <td>
        Cell 372
      </td>
      <td>
        Cell 373
      </td>
    </tr>
    <tr>
      <td>
        Cell 381
      </td>
      <td>
        Cell 382
      </td>
      <td>
        Cell 383
      </td>
    </tr>
    <tr>
      <td>
        Cell 391
      </td>
      <td>
        Cell 392
      </td>
      <td>
        Cell 393
      </td>
    </tr>
    <tr>
      <td>
        Cell 401
      </td>
      <td>
        Cell 402
      </td>
      <td>
        Cell 403
      </td>
    </tr>
    <tr>
      <td>
        Cell 411
      </td>
      <td>
        Cell 412
      </td>
      <td>
        Cell 413
      </td>
    </tr>
    <tr>
      <td>
        Cell 421
      </td>
      <td>
        Cell 422
      </td>
      <td>
        Cell 423
      </td>
    </tr>
    <tr>
      <td>
        Cell 431
      </td>
      <td>
        Cell 432
      </td>
      <td>
        Cell 433
      </td>
    </tr>
    <tr>
      <td>
        Cell 441
      </td>
      <td>
        Cell 442
      </td>
      <td>
        Cell 443
      </td>
    </tr>
    <tr>
      <td>
        Cell 451
      </td>
      <td>
        Cell 452
      </td>
      <td>
        Cell 453
      </td>
    </tr>
    <tr>
      <td>
        Cell 461
      </td>
      <td>
        Cell 462
      </td>
      <td>
        Cell 463
      </td>
    </tr>
    <tr>
      <td>
        Cell 471
      </td>
      <td>
        Cell 472
      </td>
      <td>
        Cell 473
      </td>
    </tr>
    <tr>
      <td>
        Cell 481
      </td>
      <td>
        Cell 482
      </td>
      <td>
        Cell 483
      </td>
    </tr>
    <tr>
      <td>
        Cell 491
      </td>
      <td>
        Cell 492
      </td>
      <td>
        Cell 493
      </td>
    </tr>
    <tr>
      <td>
        Cell 501
      </td>
      <td>
        Cell 502
      </td>
      <td>
        Cell 503
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`With Border 1`] = `
<div style="display: grid; gap: 1rem;">
  <table data-border="true">
    <tbody>
      <tr>
        <td>
          Cell 11
        </td>
        <td>
          Cell 12
        </td>
        <td>
          Cell 13
        </td>
      </tr>
      <tr>
        <td>
          Cell 21
        </td>
        <td>
          Cell 22
        </td>
        <td>
          Cell 23
        </td>
      </tr>
      <tr>
        <td>
          Cell 31
        </td>
        <td>
          Cell 32
        </td>
        <td>
          Cell 33
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td>
          Cell 11
        </td>
        <td>
          Cell 12
        </td>
        <td>
          Cell 13
        </td>
      </tr>
      <tr>
        <td>
          Cell 21
        </td>
        <td>
          Cell 22
        </td>
        <td>
          Cell 23
        </td>
      </tr>
      <tr>
        <td>
          Cell 31
        </td>
        <td>
          Cell 32
        </td>
        <td>
          Cell 33
        </td>
      </tr>
    </tbody>
  </table>
  <table data-border="true">
    <thead>
      <tr>
        <th>
          Header 3
        </th>
        <th>
          Header 4
        </th>
        <th>
          Header 5
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Cell 11
        </td>
        <td>
          Cell 12
        </td>
        <td>
          Cell 13
        </td>
      </tr>
      <tr>
        <td>
          Cell 21
        </td>
        <td>
          Cell 22
        </td>
        <td>
          Cell 23
        </td>
      </tr>
      <tr>
        <td>
          Cell 31
        </td>
        <td>
          Cell 32
        </td>
        <td>
          Cell 33
        </td>
      </tr>
    </tbody>
  </table>
  <table data-border="true">
    <tbody>
      <tr>
        <td>
          Cell 11
        </td>
        <td>
          Cell 12
        </td>
        <td>
          Cell 13
        </td>
      </tr>
      <tr>
        <td>
          Cell 21
        </td>
        <td>
          Cell 22
        </td>
        <td>
          Cell 23
        </td>
      </tr>
      <tr>
        <td>
          Cell 31
        </td>
        <td>
          Cell 32
        </td>
        <td>
          Cell 33
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Footer 1
        </th>
        <th>
          Footer 2
        </th>
        <th>
          Footer 3
        </th>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`With Form Elements 1`] = `
<table>
  <thead>
    <tr>
      <th>
        <div>
          <input
            type="checkbox"
            aria-label="Select all"
            name="my-checkbox"
            value
            id=":m7opkag4dma"
          >
        </div>
      </th>
      <th>
        Header 1
      </th>
      <th>
        Header 2
      </th>
      <th>
        Header 3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            aria-label="Check 1"
            name="my-checkbox"
            value="1"
            id=":m7opkag4b9y"
          >
        </div>
      </td>
      <td>
        1
      </td>
      <td>
        1
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              type="text"
              aria-label="Textfield 1"
              id=":m7opkag4oo1"
            >
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            aria-label="Check 2"
            name="my-checkbox"
            value="2"
            checked
            id=":m7opkag468b"
          >
        </div>
      </td>
      <td>
        2
      </td>
      <td>
        2
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              type="text"
              aria-label="Textfield 2"
              id=":m7opkag4o85"
            >
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            type="checkbox"
            aria-label="Check 3"
            name="my-checkbox"
            value="3"
            id=":m7opkag4vyh"
          >
        </div>
      </td>
      <td>
        3
      </td>
      <td>
        3
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              type="text"
              aria-label="Textfield 3"
              id=":m7opkag4ml0"
            >
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
